--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <!--Navigation-->
         <nav> 
             <ul>
-                <li>Project 1</li>
-                <li>Project 1 Process</li>
-                <li>Project 2</li>
-                <li>Project 2 Process</li>
+                <li> <a href="#">Project 1</a> </li>
+                <li> <a href="#">Project 1 Process</a> </li>
+                <li> <a href="#">Project 2</a> </li>
+                <li> <a href="#">Project 2 Process</a> </li>
             </ul>
         </nav>
 
@@ -47,7 +47,12 @@
         
         <hr>
 
-        <p>© Copyright 2023</p> <!--copyright and email address-->
+        <!--copyright and email address-->
+        <p>
+            <b>© Copyright 2023</b>
+            <br>
+            <a href="mailto:chloe@unflat.com">chloe@unflat.com</a>
+        </p> 
 
         <ul>
             <li>
