--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
         <hr>
 
         <!--copyright and email address-->
-        <p>
-            <b>© Copyright 2023</b>
-            <br>
+        <div class="copy">
+            <p>
+            <strong>© Copyright 2023</strong>
+            <br><br>
             <a href="mailto:chloe@unflat.com">chloe@unflat.com</a>
         </p> 
+    </div>
 
         <ul>
             <li>
