--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav> 
                 <ul id="mainNav">
                     <li> <a href="https://www.figma.com/proto/TrDDALiHO4q4gN57NfB7A4/VAMOS-Redesign?page-id=0%3A1&node-id=137%3A134&scaling=min-zoom&starting-point-node-id=137%3A134">Project 1</a> </li>
-                    <li> <a href="#">Project 1 Process</a> </li>
+                    <li> <a href="files/vamoscasestudy.pdf">Project 1 Process</a> </li>
                     <li> <a href="#">Project 2</a> </li>
                     <li> <a href="#">Project 2 Process</a> </li>
                 </ul>
