--- a/skeleton.html
+++ b/skeleton.html
@@ -44,7 +44,7 @@
                     <li> <a href="https://www.figma.com/proto/TrDDALiHO4q4gN57NfB7A4/VAMOS-Redesign?page-id=0%3A1&node-id=137%3A134&scaling=min-zoom&starting-point-node-id=137%3A134" target="_blank">Project 1</a> </li>
                     <li> <a href="files/vamoscasestudy.pdf" target="_blank">Project 1 Process</a> </li>
                     <li> <a href="#">Project 2</a> </li>
-                    <li> <a href="#">Project 2 Process</a> </li>
+                    <li> <a href="https://www.figma.com/proto/6xLLoeSj2Nza77ZEFaQXzd/what-i-meant-to-say...?page-id=0%3A1&node-id=22%3A42&viewport=225%2C398%2C0.18&scaling=min-zoom&starting-point-node-id=22%3A42&show-proto-sidebar=1">Project 2 Process</a> </li>
                     <li> <a href="https://unflatc5154.myportfolio.com/" target="_blank">Portfolio</a></li>
                 </ul>
             </nav>
